<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_black"
    android:orientation="vertical">

    <LinearLayout
        style="@style/TextLayoutStyle">

        <LinearLayout
            style="@style/VerticalLayoutStyle">

            <me.grantland.widget.AutofitTextView
                android:id="@+id/enter_text"
                style="@style/TextViewStyle"
                android:textColor="@color/text_white"
                autofit:minTextSize="@dimen/text_view_min_size"/>

            <me.grantland.widget.AutofitTextView
                android:id="@+id/equals_text"
                style="@style/TextViewStyle"
                android:textColor="@color/text_white"
                autofit:minTextSize="@dimen/text_view_min_size"/>

        </LinearLayout>

        <LinearLayout
            style="@style/ClearLayoutStyle">

            <Spinner
                android:id="@+id/spinner"
                style="@style/SpinnerStyle"
                android:background="@drawable/press_tool_black"/>

            <Button
                android:id="@+id/c_button"
                style="@style/BlackClearButtonStyle"
                android:text="@string/c_button"/>

            <Button
                android:id="@+id/clear_button"
                style="@style/BlackClearButtonStyle"
                android:onClick="clearButton"
                android:text="@string/clear_button"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/HorizontalLayoutStyle">

        <Button
            android:id="@+id/seven_button"
            style="@style/BlackNumberButtonStyle"
            android:text="@string/seven_button"/>

        <Button
            android:id="@+id/eight_button"
            style="@style/BlackNumberButtonStyle"
            android:text="@string/eight_button"/>

        <Button
            android:id="@+id/nine_button"
            style="@style/BlackNumberButtonStyle"
            android:text="@string/nine_button"/>

        <Button
            android:id="@+id/divide_button"
            style="@style/BlackToolButtonStyle"
            android:text="@string/divide_button"/>

    </LinearLayout>

    <LinearLayout
        style="@style/HorizontalLayoutStyle">

        <Button
            android:id="@+id/four_button"
            style="@style/BlackNumberButtonStyle"
            android:text="@string/four_button"/>

        <Button
            android:id="@+id/five_button"
            style="@style/BlackNumberButtonStyle"
            android:text="@string/five_button"/>

        <Button
            android:id="@+id/six_button"
            style="@style/BlackNumberButtonStyle"
            android:text="@string/six_button"/>

        <Button
            android:id="@+id/multiply_button"
            style="@style/BlackToolButtonStyle"
            android:text="@string/multiply_button"/>

    </LinearLayout>

    <LinearLayout
        style="@style/HorizontalLayoutStyle">

        <Button
            android:id="@+id/one_button"
            style="@style/BlackNumberButtonStyle"
            android:text="@string/one_button"/>

        <Button
            android:id="@+id/two_button"
            style="@style/BlackNumberButtonStyle"
            android:text="@string/two_button"/>

        <Button
            android:id="@+id/three_button"
            style="@style/BlackNumberButtonStyle"
            android:text="@string/three_button"/>

        <Button
            android:id="@+id/minus_button"
            style="@style/BlackToolButtonStyle"
            android:text="@string/minus_button"/>

    </LinearLayout>

    <LinearLayout
        style="@style/HorizontalLayoutStyle">

        <Button
            android:id="@+id/point_button"
            style="@style/BlackNumberButtonStyle"
            android:onClick="pointButton"
            android:text="@string/point_button"/>

        <Button
            android:id="@+id/zero_button"
            style="@style/BlackNumberButtonStyle"
            android:text="@string/zero_button"/>

        <Button
            android:id="@+id/equals_button"
            style="@style/BlackNumberButtonStyle"
            android:text="@string/equals_button"/>

        <Button
            android:id="@+id/plus_button"
            style="@style/BlackToolButtonStyle"
            android:text="@string/plus_button"/>

    </LinearLayout>

</LinearLayout>